# mvmusic

./: .gitignore  pyproject.toml  setup.py
http-client/: requests.http  subsonic_api.http
migrations/: env.py
migrations/versions/: 03e4df158f95_.py  15b19081b752_.py  39a552eb65ac_.py  675a43a678a8_.py  7f42ca79825b_.py  84174a640dd0_.py  857418f3e731_.py  8a37891f29aa_.py  8f27a15d7daa_.py  8fd2f5658acd_.py  97919189dec9_.py  99bca8998b42_.py  9df50f0ddc90_.py  a8f35f30a12c_.py  b5ddf68226dd_.py  c4acf3fc4b8c_.py  d678b690a5d9_.py  e19c06f92c02_.py  e29034c85c9d_.py
mvmusic/: __init__.py  __main__.py  cli.py  logger.py  settings.py
mvmusic/api/: __init__.py  app.py  bp.py  wsgi.py
mvmusic/api/libs/: __init__.py  decorators.py  responses.py
mvmusic/api/serializers/: album_id3.py  album_info.py  album_list.py  album_list2.py  album_with_songs_id3.py  artist.py  artist_id3.py  child.py  (+21 more)
mvmusic/cli/: __init__.py
mvmusic/common/: database.py  decorators.py  models.py  types.py  utils.py
mvmusic/general/: urls.py
mvmusic/helpers/: library.py  user.py
mvmusic/libs/: __init__.py  database.py  discogs.py  exceptions.py  library.py  logger.py  musicbrainz.py  scanner.py  user.py  wiki.py
mvmusic/models/: __init__.py  album.py  artist.py  client.py  directory.py  directory_rating.py  genre.py  history.py  image.py  library.py  media.py  media_genre.py  media_rating.py  music_library.py  starred_album.py  starred_artist.py  starred_directory.py  starred_media.py  user.py  user_library.py  user_music_library.py
mvmusic/subsonic_api/: responses.py  urls.py
(+120 files in other folders)
